# moat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  dart-state-machine-plan.md  drawbridge-cli-learnings.md  implementation.md  moat-core-drawbridge-plan.md  moat-dart-app-plan.md  mobile_preparation.md  multi-device.md  notifications-plan.md  off-chain-storage-plan.md  testing-plan.md  transcript-integrity-plan.md
.claude/: settings.json
crates/moat-atproto/: Cargo.toml
crates/moat-atproto/src/: client.rs  error.rs  lib.rs  records.rs
crates/moat-cli/: Cargo.toml  README.md
crates/moat-cli/src/: app.rs  drawbridge.rs  keystore.rs  main.rs  message_helpers.rs  ui.rs
crates/moat-cli/tests/: proptest_drawbridge.rs
crates/moat-core/: Cargo.toml
crates/moat-core/src/: api.rs  credential.rs  error.rs  event.rs  lib.rs  message.rs  padding.rs  stealth.rs  storage.rs  tag.rs  tests.rs
crates/moat-core/tests/: conversation_sim.rs  proptest_drawbridge.rs  proptest_message_event.rs  proptest_padding_tag.rs  proptest_tag_scanning.rs  proptest_transcript_integrity.rs  test_commit_conflict.rs  test_epoch_fingerprint.rs  test_hash_chain.rs
lexicons/social/moat/: event.json  keyPackage.json  stealthAddress.json
moat-drawbridge/: .dockerignore  Dockerfile  auth.go  auth_test.go  conn.go  drawbridge-flutter-plan.md  drawbridge-plan.md  drawbridge_prop_test.go  fly-deployment-plan.md  fly.toml  go.mod  go.sum  implementation-plan.md  main.go  messages.go  relay.go  relay_prop_test.go  relay_test.go  verify.go  verify_test.go
moat-drawbridge/testdata/: challenge_vectors.json
moat-flutter/: README.md  pubspec.yaml
moat-flutter/android/app/: build.gradle.kts
moat-flutter/assets/: pattern_license.txt
moat-flutter/integration_test/: simple_test.dart
moat-flutter/ios/Runner/: Info.plist
moat-flutter/ios/Runner.xcodeproj/: project.pbxproj
moat-flutter/lib/: main.dart
moat-flutter/lib/models/: bluesky_profile.dart  conversation.dart  message.dart
moat-flutter/lib/providers/: auth_provider.dart  conversations_provider.dart  messages_provider.dart  profile_provider.dart  theme_provider.dart  watch_list_provider.dart
moat-flutter/lib/screens/: conversation_screen.dart  conversations_screen.dart  login_screen.dart  new_conversation_screen.dart  watch_list_screen.dart
moat-flutter/lib/services/: atproto_client.dart  conversation_manager.dart  conversation_repository.dart  conversation_storage.dart  conversation_storage_native.dart  conversation_storage_web.dart  debug_log.dart  debug_log_native.dart  debug_log_web.dart  message_notifier.dart  message_service.dart  message_storage.dart  message_storage_native.dart  message_storage_web.dart  polling_service.dart  profile_cache_service.dart  profile_cache_service_native.dart  profile_cache_service_web.dart  secure_storage.dart  send_queue.dart  send_service.dart
moat-flutter/lib/utils/: message_payload.dart
moat-flutter/lib/widgets/: avatar_widget.dart  message_bubble.dart
moat-flutter/linux/: CMakeLists.txt
moat-flutter/linux/flutter/: generated_plugins.cmake
moat-flutter/linux/runner/: my_application.cc
moat-flutter/macos/Runner.xcodeproj/: project.pbxproj
moat-flutter/rust/: Cargo.toml
moat-flutter/rust/src/: frb_generated.rs
moat-flutter/rust/src/api/: simple.rs
moat-flutter/rust_builder/: pubspec.yaml
moat-flutter/rust_builder/android/: build.gradle  settings.gradle
moat-flutter/rust_builder/ios/: rust_lib_moat_flutter.podspec
moat-flutter/rust_builder/linux/: CMakeLists.txt
moat-flutter/rust_builder/macos/: rust_lib_moat_flutter.podspec
moat-flutter/rust_builder/windows/: CMakeLists.txt
moat-flutter/scripts/: run-web.sh
moat-flutter/test/models/: bluesky_profile_test.dart  conversation_test.dart  message_test.dart
moat-flutter/test/services/: conversation_manager_test.dart  conversation_repository_test.dart  conversation_storage_test.dart  integration_test.dart  message_storage_test.dart  send_queue_test.dart
moat-flutter/web/: index.html  manifest.json
moat-flutter/windows/: CMakeLists.txt
moat-flutter/windows/flutter/: generated_plugins.cmake
moat-flutter/windows/runner/: Runner.rc  main.cpp
proposals/: event-kind-refactor.md
(+20 files in other folders)
