[package]
name = "moat-atproto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ATProto PDS interaction for Moat encrypted messenger"

[dependencies]
atrium-api = { workspace = true }
atrium-xrpc-client = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ipld-core = "0.4"
