[package]
name = "moat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure MLS logic for Moat encrypted messenger"

[dependencies]
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_basic_credential = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
