[package]
name = "moat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure MLS logic for Moat encrypted messenger"

[dependencies]
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }

[features]
js = ["openmls/js", "getrandom/js"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1"
