[package]
name = "rust_lib_moat_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
moat-core = { path = "../../crates/moat-core" }
serde_json = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
moat-core = { path = "../../crates/moat-core", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
